--- a/sass/partials/_calendarlist.scss
+++ b/sass/partials/_calendarlist.scss
@@ -33,6 +33,11 @@
 		background-image: none;
 	}
 
+
+	.new-entity-container {
+		margin-top: 45px;
+	}
+
 	.new-entity {
 		display: block;
 		width: 100%;
